# flask-moreshell

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: labels.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/: flask_moreshell.py
src/flask_moreshell/: __init__.py  __main__.py  script.py
src/flask_moreshell/shells/: __init__.py  base_shell.py  bpython_shell.py  ipython_shell.py  ptpython_shell.py  python_shell.py
tests/: .flaskenv  __init__.py  conftest.py  test_app.py  test_main.py  test_script.py
tests/shells/: flask_fixture.py  test_bpython_shell.py  test_ipython_shell.py  test_ptpython_shell.py
