[tool.poetry]
name = "flask-moreshell"
version = "0.1.4"
description = "Flask Moreshell"
authors = ["JAEGYUN JUNG <twicegoddessana1229@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tgoddessana/flask-moreshell"
repository = "https://github.com/tgoddessana/flask-moreshell"
documentation = "https://flask-moreshell.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/tgoddessana/flask-moreshell/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0.1"
nox-poetry = "^1.0.3"
nox = "^2023.4.22"
furo = "^2023.9.10"

[tool.poetry.extras]
ipython = ["ipython"]
ptpython = ["ptpython"]
bpython = ["bpython"]
all = ["ipython", "ptpython", "bpython"]

[tool.poetry.scripts]
flask-moreshell = "flask_moreshell.__main__:main"

[tool.poetry.group.development.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = { extras = ["toml"], version = ">=6.2" }
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }
ipython = "^8.17.2"
ptpython = "^3.0.23"
bpython = "^0.24"
flask = "^2.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["flask_moreshell", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flask.commands"]
shell = "flask_moreshell:shell"
